[gd_scene format=3 uid="uid://dkqrhp8obyxw4"]

[ext_resource type="Script" uid="uid://dbmomybyv6vrt" path="res://scenes/Act1/act.gd" id="1_3rya3"]
[ext_resource type="PackedScene" uid="uid://562kr87tx0wf" path="res://scenes/Environment/environment.tscn" id="2_2nqyv"]
[ext_resource type="Texture2D" uid="uid://c5s0r0ilyxv54" path="res://scenes/Act1/act1_ghost_layer1.png" id="3_lxwim"]
[ext_resource type="Texture2D" uid="uid://cmmtqnqiedirl" path="res://assets/curtains/curtain_ghost_run_bg.png" id="4_xbvoi"]
[ext_resource type="Texture2D" uid="uid://cknr6ev3gilni" path="res://scenes/Act1/act1_ghost_layer2.png" id="5_k3p8n"]
[ext_resource type="Texture2D" uid="uid://bgdi2w3ntqvwv" path="res://assets/curtains/curtain_record_run.png" id="6_p5a4g"]
[ext_resource type="PackedScene" uid="uid://cmvu72hfj0uu4" path="res://scenes/Platform/platform.tscn" id="7_q3885"]
[ext_resource type="PackedScene" uid="uid://c7xrocq7m8k0u" path="res://scenes/Ground/ground.tscn" id="8_gfll1"]
[ext_resource type="PackedScene" uid="uid://bn7lxk0ph8aym" path="res://scenes/Star/star.tscn" id="9_t6sxg"]
[ext_resource type="PackedScene" uid="uid://bwaevcirj6oib" path="res://scenes/KillZone/kill_zone.tscn" id="10_8cp8b"]

[node name="Act2" type="Node2D" unique_id=1603398155]
script = ExtResource("1_3rya3")

[node name="Environment" parent="." unique_id=1633693839 instance=ExtResource("2_2nqyv")]
position = Vector2(644, 298)

[node name="GhostBackground" type="Sprite2D" parent="." unique_id=160617654]
visible = false
texture = ExtResource("3_lxwim")

[node name="CurtainGhost" type="Sprite2D" parent="." unique_id=1864374658]
visible = false
texture = ExtResource("4_xbvoi")

[node name="GhostBackgroundLayer2" type="Sprite2D" parent="." unique_id=48485112]
visible = false
texture = ExtResource("5_k3p8n")

[node name="Curtain" type="Sprite2D" parent="." unique_id=1232644688]
texture = ExtResource("6_p5a4g")

[node name="Platform" parent="." unique_id=444993873 instance=ExtResource("7_q3885")]
position = Vector2(-582, 97)
dir = "y"
distance = 300
duration = 3

[node name="Platform2" parent="." unique_id=466164217 instance=ExtResource("7_q3885")]
position = Vector2(-85, -151)
dir = "x"
distance = 150
duration = 3

[node name="Platform3" parent="." unique_id=614260946 instance=ExtResource("7_q3885")]
position = Vector2(423, 219)
dir = "y"
distance = 200
duration = 3

[node name="Platform4" parent="." unique_id=2003547574 instance=ExtResource("7_q3885")]
position = Vector2(858, 196)
dir = "x"
distance = 200
duration = 3

[node name="Platform5" parent="." unique_id=1382944079 instance=ExtResource("7_q3885")]
position = Vector2(1325, 122)
dir = "y"
distance = 300
duration = 3

[node name="Platform6" parent="." unique_id=2139322606 instance=ExtResource("7_q3885")]
position = Vector2(1726, -70)
dir = "x"
distance = 300
duration = 3

[node name="Platform7" parent="." unique_id=499737976 instance=ExtResource("7_q3885")]
position = Vector2(2065, 288)
dir = "x"
distance = 350
duration = 3

[node name="Platform8" parent="." unique_id=797375074 instance=ExtResource("7_q3885")]
position = Vector2(2264, 27)
dir = "x"
distance = 300
duration = 3

[node name="Ground1" parent="." unique_id=485363198 instance=ExtResource("8_gfll1")]
position = Vector2(-762, 288)

[node name="Ground2" parent="." unique_id=842944472 instance=ExtResource("8_gfll1")]
position = Vector2(-389, -194)

[node name="Ground3" parent="." unique_id=345386964 instance=ExtResource("8_gfll1")]
position = Vector2(267, -71)

[node name="Ground4" parent="." unique_id=844362023 instance=ExtResource("8_gfll1")]
position = Vector2(201, 293)

[node name="Ground5" parent="." unique_id=1469796441 instance=ExtResource("8_gfll1")]
position = Vector2(1491, -136)

[node name="Ground6" parent="." unique_id=2023014513 instance=ExtResource("8_gfll1")]
position = Vector2(1724, 191)

[node name="Ground7" parent="." unique_id=327542969 instance=ExtResource("8_gfll1")]
position = Vector2(2533, 366)

[node name="Star" parent="." unique_id=1786637024 groups=["stars2"] instance=ExtResource("9_t6sxg")]
position = Vector2(202, 242)

[node name="Star2" parent="." unique_id=1164754737 groups=["stars2"] instance=ExtResource("9_t6sxg")]
position = Vector2(1723, 136)

[node name="Star3" parent="." unique_id=1876686271 groups=["stars2"] instance=ExtResource("9_t6sxg")]
position = Vector2(2530, 316)
star_type = 1

[node name="KillZone" parent="." unique_id=41493325 instance=ExtResource("10_8cp8b")]
position = Vector2(-990, 540)
